# education-opportunity-lab

./: .gitignore  README.md  pyproject.toml
config/: panel_schema.json  sources.json
docs/: data_dictionary.md  roadmap.md
notebooks/: 01_demographic_overperformers.ipynb  02_spending_vs_outcomes.ipynb  03_infrastructure_lead_lag.ipynb  04_policy_event_study.ipynb
samples/: acs.csv  ccd.csv  crdc.csv  crime.csv  f33.csv  outcomes.csv  policy_events.csv  special_education.csv
scripts/: build_event_study.py  build_panel.py  fetch_census_district_data.py  fetch_crdc_data.py  fetch_edfacts_data.py  fetch_urban_district_data.py  generate_notebooks.py  normalize_crime_data.py  report_best_outcomes_per_dollar.py  report_districts_in_decline.py  report_infrastructure_gap.py  report_most_improved.py  report_spending_effectiveness.py  validate_panel.py
src/education_opportunity_lab/: __init__.py  census_api.py  cli.py  crdc_api.py  crime_normalizer.py  edfacts_api.py  event_study.py  pipeline.py  reports.py  schema.py  urban_api.py
tests/: test_pipeline.py  test_reports.py  test_sources.py
