[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "education-opportunity-lab"
version = "0.1.0"
description = "District-year education opportunity panel builder."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
eol-build-panel = "education_opportunity_lab.cli:build_panel_main"
eol-validate-panel = "education_opportunity_lab.cli:validate_panel_main"

[tool.setuptools.packages.find]
where = ["src"]
