[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "education-opportunity-lab"
version = "0.1.0"
description = "District-year education opportunity panel builder."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
eol-build-panel = "education_opportunity_lab.cli:build_panel_main"
eol-validate-panel = "education_opportunity_lab.cli:validate_panel_main"
eol-fetch-urban = "education_opportunity_lab.urban_api:main"
eol-fetch-census = "education_opportunity_lab.census_api:main"
eol-fetch-crdc = "education_opportunity_lab.crdc_api:main"
eol-normalize-crime = "education_opportunity_lab.crime_normalizer:main"
eol-fetch-edfacts = "education_opportunity_lab.edfacts_api:main"
eol-build-event-study = "education_opportunity_lab.event_study:build_event_study_main"
eol-report-most-improved = "education_opportunity_lab.reports:most_improved_main"
eol-report-best-per-dollar = "education_opportunity_lab.reports:best_outcomes_per_dollar_main"
eol-report-spending-effectiveness = "education_opportunity_lab.reports:spending_effectiveness_main"
eol-report-in-decline = "education_opportunity_lab.reports:districts_in_decline_main"
eol-report-infrastructure-gap = "education_opportunity_lab.reports:infrastructure_gap_main"

[tool.setuptools.packages.find]
where = ["src"]
